<resources>
    <string name="app_name">Inge</string>
    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submitter">Submitter :</string>
    <string name="id">ID :</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="product_name">Product Name</string>
    <string name="no_product_in_cart">No Product in Cart</string>
    <string name="check_out">Check Out</string>
    <string name="sub_total">Sub Total :</string>
    <string name="address">Vadakovai, Coimbatore, TamilNadu - 636 656</string>
    <string name="addr_detail">Shipping Address Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="checkout">Proceed to Checkout</string>
    <string name="your_email">Your Email</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="start">Start</string>
    <string name="go_to_login">Go to Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="categories">Categories</string>
    <string name="sort">Sort</string>
    <string name="template">e-Commerce Shop UI Template</string>
    <string name="loading">Loading...</string>
    <string name="register">Register</string>
    <string name="latest_collection">Latest Collection</string>
    <string name="more">More</string>
    <string name="we_choose_for_you">We Choose for you</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="online_payment">Online Payment</string>
    <string name="my_profile">My Profile</string>
    <string name="category">Category</string>
    <string name="product_filter">Product Filter</string>
    <string name="wishlist">Wishlist</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
</resources>
