<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_layout"
    android:background="@drawable/splash_bg"
    tools:context="com.android.shoppingapp.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:fastScrollEnabled="true"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/sign_in_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/xxhdpi_20"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/login_email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_filled"
                    android:padding="@dimen/xxhdpi_10"
                    android:textColor="@color/color_txt_color"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/segoeui_1"
                    android:hint="@string/your_email"/>

                <EditText
                    android:id="@+id/login_name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_filled"
                    android:padding="@dimen/xxhdpi_10"
                    android:layout_marginTop="@dimen/xxhdpi_10"
                    android:textColor="@color/color_txt_color"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/segoeui_1"
                    android:hint="@string/username"/>

                <EditText
                    android:id="@+id/login_pswd_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_filled"
                    android:padding="@dimen/xxhdpi_10"
                    android:layout_marginTop="@dimen/xxhdpi_10"
                    android:textColor="@color/color_txt_color"
                    android:textColorHint="@color/grey"
                    android:inputType="textPassword"
                    android:fontFamily="@font/segoeui_1"
                    android:hint="@string/password"/>

                <EditText
                    android:id="@+id/login_conf_pswd_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_filled"
                    android:padding="@dimen/xxhdpi_10"
                    android:layout_marginTop="@dimen/xxhdpi_10"
                    android:textColor="@color/color_txt_color"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/segoeui_1"
                    android:hint="@string/password_confirmation"/>

                <Button
                    android:id="@+id/login_submit_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/xxhdpi_10"
                    android:layout_marginTop="@dimen/xxhdpi_10"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textSize="@dimen/t_xxh_16"
                    android:fontFamily="@font/segoeuib_1"
                    android:text="@string/start"/>

                <TextView
                    android:id="@+id/login_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xxhdpi_5"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:fontFamily="@font/segoeui_1"
                    android:textSize="@dimen/t_xxh_16"
                    android:textColor="@color/color_txt_color"
                    android:text="@string/go_to_login"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <TextView
        android:id="@+id/login_forgot_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/xxhdpi_10"
        android:paddingBottom="@dimen/xxhdpi_10"
        android:gravity="center"
        android:fontFamily="@font/segoeui_1"
        android:textSize="@dimen/t_xxh_18"
        android:textColor="@color/white"
        android:text="@string/forgot_password"/>

</RelativeLayout>