<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/xxhdpi_5"
    android:layout_marginRight="@dimen/xxhdpi_5"
    android:layout_marginTop="@dimen/xxhdpi_10"
    android:layout_marginBottom="@dimen/xxhdpi_10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuib_1"
                android:text="@string/latest_collection"
                android:textColor="@color/color_txt_color"
                android:textSize="@dimen/t_xxh_14"/>
            <TextView
                android:id="@+id/latest_more_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuib_1"
                android:text="@string/more"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/t_xxh_14"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/latest_collection_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxhdpi_10"
            android:orientation="horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxhdpi_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuib_1"
                android:text="@string/we_choose_for_you"
                android:textColor="@color/color_txt_color"
                android:textSize="@dimen/t_xxh_14"/>
            <TextView
                android:id="@+id/we_choose_more_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuib_1"
                android:text="@string/more"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/t_xxh_14"/>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/we_choose_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxhdpi_10"
            android:orientation="horizontal"/>

    </LinearLayout>

</LinearLayout>